--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Le titre de la page  -->
   <title>Cours HTML</title>
-  <!-- Icones de l'onglet -->
+  <!-- Icone de l'onglet -->
   <link rel="shortcut icon" href="html-logo.png">
 </head>
 
 <body>
-  <section>
-    <div>
-      <h1>Texte - Titre H1</h1>
-      <p><em>em pour mettre en italique</em>, <strong>strong pour mettre en gras</strong> <span>L'élement en span ne
-          revient pas à la ligne</span>.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cumque ratione veniam officiis nulla a
-        debitis at facilis sed dignissimos.</p>
-    </div>
+  <header>
+    <h1>Texte - Titre H1</h1>
+    <p><em>em pour mettre en italique</em>, <strong>strong pour mettre en gras</strong> <span>L'élement en span ne
+        revient pas à la ligne</span>.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cumque ratione veniam officiis nulla a
+      debitis at facilis sed dignissimos.</p>
+  </header>
 
+  <section>
     <div>
       <h2>Photo - Titre H2</h2>
       <img src="./img-1.jpg" alt="image-arbre" height="200">
@@ -40,14 +40,7 @@
     </div>
 
     <div>
-      <h4><span>&#9814;</span> Liens - Titre H4</h4>
-      <a href="https://htmlcheatsheet.com/" target="_blank">HTML Cheatsheet</a>
-      <br>
-      <a href="https://www.toptal.com/designers/htmlarrows/symbols/" target="_blank">Icones natifs en HTML</a>
-    </div>
-
-    <div>
-      <h5>Tableaux - Titre H5</h5>
+      <h4>Tableaux - Titre H4</h4>
       <table border="2" style="text-align: center;">
         <!-- Légende -->
         <caption>Populations d'europe</caption>
@@ -74,6 +67,13 @@
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <div>
+      <h5><span>&#9814;</span> Liens - Titre H5</h5>
+      <a href="https://htmlcheatsheet.com/" target="_blank">HTML Cheatsheet</a>
+      <br>
+      <a href="https://www.toptal.com/designers/htmlarrows/symbols/" target="_blank">Icones natifs en HTML</a>
     </div>
 
     <div>
@@ -111,18 +111,18 @@
       <textarea cols="20" rows="5" placeholder="Votre message..."></textarea><br />
 
       <!-- Input Checkbox -->
-      <label><input type="checkbox" value="tandc" />Accept terms</label> <br />
+      <label><input type="checkbox" />Accepter les CGV</label> <br />
       <input type="submit" value="Submit" />
     </form>
   </section>
   <br>
   <!-- Mail & envoi de fichiers -->
-  <section>
+  <footer>
     <a href="mailto:fs@gmail.com">Ecrivez-moi !</a>
     <br>
-    <a href="notice.txt" download="test">Télécharger la notice</a>
+    <a href="notice.txt" download="nom-du-fichier">Télécharger la notice</a>
 
-  </section>
+  </footer>
 
 </body>
 
