--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
     <div class="offers">
       <div class="cards-container">
         <div class="card">
-          <div class="perspective-3d" style="background:url('./img/off1.jpg');">
+          <div class="perspective-3d">
             <h2>A weekend in space</h2>
             <span>from $5.000</span>
           </div>
         </div>
         <div class="card">
-          <div class="perspective-3d" style="background:url('./img/off2.jpg')">
+          <div class="perspective-3d">
             <h2>Take a rest on the moon</h2>
             <span>from $15.000</span>
           </div>
         </div>
         <div class="card">
-          <div class="perspective-3d" style="background:url('./img/off3.jpg');">
+          <div class="perspective-3d">
             <h2>Holidays on Mars</h2>
             <span>from $45.000</span>
           </div>
@@ -57,9 +57,9 @@
 
     <div class="button">
       <a href="http://www.spacex.com" target="_blank">
-        <svg height="60" width="320">
+        <!-- <svg height="60" width="320">
           <rect class="button__rect" height="60" width="320" />
-        </svg>
+        </svg> -->
         <div class="button__text">GET STARTED</div>
       </a>
     </div>
